boulder/tests/error/module/import_unknown_item.bo
# item `b` does not exist
# (8:

mod inner {
    fn a() {}
}

use inner::b;